<resources>
    <string name="app_name">MakeAWish</string>
    <!-- Network error message-->
    <string name="unknown_error">Some unknown error occurred.</string>
    <string name="network_error">Please check your internet connection.</string>
    <string name="system_error">Something went wrong. Please try again later.</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Custom Fonts -->
    <string name="font_name_montserrat">montserrat</string>
    <string name="font_name_montserrat_bold">montserrat_bold</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="emailid">EmailID</string>
    <string name="volunteer">Volunteer</string>
    <string name="donor">Donor</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="signup">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string-array name="VolunteerLocation">
        <item>Select Preferred Location</item>
        <item>Ahemdabad</item>
        <item>Bengaluru</item>
        <item>Chennai</item>
        <item>Delhi</item>
        <item>Hyderabad</item>
        <item>Jaipur</item>
        <item>Kolkata</item>
        <item>Mumbai</item>
    </string-array>

    <string name="dateofadm">Dt. Of Admn.</string>
    <string name="dateidf">Dt. Identified</string>
    <string name="granted">Whether wish granted earlier.(Yes/No)</string>
    <string name="wish">Wish identified(As expressed by child)</string>
    <string name="dateoffulfillment">Proposed Date of wish fulfillment:</string>
    <string name="rushwish">Rush wish? (Yes/No)</string>
    <string name="wish1">Wish 1</string>
    <string name="wish2">Wish 2</string>
    <string name="wish3">Wish 3</string>
    <string name="take">Take a wish</string>
    <string name="donate_now">DOnate Now!</string>

    <string-array name="wishtypes">
        <item>Select Wish type</item>
        <item>I want to meet</item>
        <item>I want to be</item>
        <item>I want to have</item>
        <item>I want to go to</item>
    </string-array>



</resources>
