<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.archish.makeawish.ui.widgets.BaseEditText
                    android:id="@+id/etDateOfAdm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateofadm" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.archish.makeawish.ui.widgets.BaseEditText
                    android:id="@+id/etDateIden"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateidf" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.archish.makeawish.ui.widgets.BaseEditText
                    android:id="@+id/etWishGranted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/granted" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

            <com.archish.makeawish.ui.widgets.BaseTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/wish" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.archish.makeawish.ui.widgets.BaseEditText
                    android:id="@+id/etWish1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wish1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.archish.makeawish.ui.widgets.BaseEditText
                    android:id="@+id/etWish2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wish2" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.archish.makeawish.ui.widgets.BaseEditText
                    android:id="@+id/etWish3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wish3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <com.archish.makeawish.ui.widgets.BaseTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dateoffulfillment" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.archish.makeawish.ui.widgets.BaseEditText
                    android:id="@+id/etRush"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rushwish" />
            </android.support.design.widget.TextInputLayout>

            <com.archish.makeawish.ui.widgets.BaseButton
                android:id="@+id/bSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Submit"
                style="@style/BaseButton"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>