<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <com.archish.makeawish.ui.widgets.BaseTextView
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.archish.makeawish.ui.widgets.BaseEditText
                android:id="@+id/etMobileNo"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailid"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.archish.makeawish.ui.widgets.BaseEditText
                android:id="@+id/etPassword"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Choose Password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <com.archish.makeawish.ui.widgets.BaseTextView

            android:id="@+id/bSubmit"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/submit" />
    </LinearLayout>

</ScrollView>